--- a/toDoListDragAndDrop/toDoListDragAndDrop.css
+++ b/toDoListDragAndDrop/toDoListDragAndDrop.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  color: azure;
-  background-color: #0b1017;
+  background-color: #ec407a;
   font-family: sans-serif;
+  color: #fff;
   user-select: none;
 }
 
@@ -18,7 +18,14 @@ body {
 }
 
 .title {
-  margin: 0 0 0 1rem;
+  margin: 0 0 1rem;
+  padding: 1rem;
+  border-bottom: 1px solid black;
+  background-color: #7e57c2;
+}
+
+.tasks {
+  width: 30%;
   text-align: center;
   background: rgb(48, 166, 221);
   border: 1px solid black;
@@ -30,14 +37,14 @@ body {
 }
 
 .task {
-  background-color: #ec407a;
+  background-color: #7e57c2;
   padding: 1rem;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #000;
   cursor: move;
 }
 
 .task:first-child {
-  border-top: 1px solid #fff;
+  border-top: 1px solid #000;
 }
 
 .task:last-child {
@@ -46,5 +53,5 @@ body {
 
 .active {
   background-color: #fff;
-  color: azure;
+  color: #000;
 }
